Add a lifecycle hook for initial state

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "another_d_render",
-  "version": "1.0.0",
+  "name": "yet_another_d_render",
+  "version": "1.0.10",
   "description": "A lightweight hotwired-compatible lib with declarative programming in HTML",
   "main": "./dist/d_render.js",
   "author": "Cantin Xu",
