--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "scripts": {
     "build": "esbuild src/d_render.js --bundle --sourcemap --outdir=dist --format=esm",
     "build:pro": "esbuild src/d_render.js --bundle --outdir=dist --format=esm",
-    "start": "http-server . -p 8888"
+    "start": "http-server . -p 8888",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "babel-jest": "^29.5.0",
+    "esbuild": "^0.15.7",
     "http-server": "^14.1.1",
-    "esbuild": "^0.15.7"
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
